# payroll-app

./: .gitignore  CMakeLists.txt  DatabaseHandler.cpp  DatabaseHandler.h  addemployeewindow.cpp  addemployeewindow.h  addemployeewindow.ui  allemployees.cpp  allemployees.h  allemployees.ui  animatedrectwidget.cpp  animatedrectwidget.h  employeeinfobox.cpp  employeeinfobox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  userdata.cpp  userdata.h
data/: 1-createtable.sql  2-seedingdatabase  payroll.db
styles/: styles.qss
